Add FindBugs and correct reported problems